[package]
name = "ryo-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
tokio = { version = "1.37.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.6.0"
http-body-util = "0.1.1"
env_logger = "0.11.3"
log = "0.4.21"
